2008-08-06  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/add_window.c (setup_frame_window):
	fix compilation without XRender

2008-05-22  Adam Goode  <adam(at)spicenitz(dot)org>

	* AUTHORS:
	* ChangeLog-pre-2.4:
	* rpm/fvwm.spec.in:
	* vms/fvwmrc.dat:
	Convert Latin-1 encodings to UTF-8

2008-05-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.27

	* ANNOUNCE:
	* NEWS:
	* configure.ac:
	updated for 2.5.26 release

2008-04-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/ewmh_events.c (ewmh_WMDesktop):
	(ewmh_WMState):
	* fvwm/ewmh.c (ewmh_AddToKdeSysTray):
	(ewmh_HandleWindowType):
	(ewmh_AddToKdeSysTray):
	(ewmh_HandleWindowType):
	(ewmh_check_wm_pid):
	64-bit fix by Alexandre Julliard

2006-03-30  Mikhael Goikhman  <migo@homemail.com>

	* configure.ac:
	fix fribidi detection when it uses pkg-config and not fribidi-config

	* libs/FBidi.c:
	fix compilation with newer fribidi-0.19.1 (or also called fribidi2),
	it now uses fribidi-types.h and not fribidi_types.h

2008-03-21  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/events.c (dispatch_event):
	Fix handling of Shape events.

2008-03-18  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/menus.c (calc_normal_item_height):
	(calc_more_item_height):
	(size_menu_vertically):
	fix calculations so the menu fit on the screen height

2008-03-12  Jes~s Guerrero  <i92guboj(at)terra(dot)es>

	* fvwm/menus.c (size_menu_vertically):
	added paddings at the top and bottom of the menus

	* fvwm/menustyle.c (parse_vertical_margins_line):
	new function to parse the VerticalMargins new MenuStyle
	command

	* fvwm/menustyle.c (menustyle_get_styleopt_index):
	added the VerticalMargins option to the list

	* fvwm/menustyle.c (menustyle_parse_style):
	added default values for the padding, and a case clause
	for the specific case when you invoke the VerticalMargins
	MenuStyle

	* fvwm/menustyle.c (menustyle_copy):