@@ -42,7 +42,8 @@ int flush_property_notify(Atom atom, Window w);
 void sync_server(int toggle);
 Bool is_resizing_event_pending(FvwmWindow *fw);
 void events_handle_configure_request(
-	XConfigureRequestEvent cre, FvwmWindow *fw, Bool force_use_grav);
+	XConfigureRequestEvent cre, FvwmWindow *fw, Bool force_use_grav,
+	int force_gravity);
 Bool test_button_event(Display *display, XEvent *event, char *arg);
 Bool test_typed_window_event(Display *display, XEvent *event, char *arg);
 
