@@ -7,6 +7,7 @@ Changes in beta release 2.5.27 (not released yet)
 
 * Bug fixes:
    - Fixed compilation without XRender support.
+   - Fixed handling of _NET_MOVERESIZE_WINDOWS requests.
 
 -------------------------------------------------------------------
 
